Fixed off-center rotation for progress.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,5 +1,5 @@
 /**
-  Header Area 
+  Header Area
 **/
 
 .logo {
@@ -9,7 +9,17 @@
   padding-left: 28px;
 }
 
-#header .fa {
+#header .link.icon {
+  width: 15px;
+  height: 15px;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 1em;
+  font-size: 1px;
+  margin-bottom: 2px;
+}
+
+#header .icon .fa {
   font-size: 15px;
   color: #fff;
 }
@@ -21,17 +31,17 @@
     -webkit-animation: spinw .7s infinite linear;
     -moz-animation: spinm .7s infinite linear;
 }
- 
+
 @keyframes spin {
     from { transform: scale(1) rotate(0deg);}
     to { transform: scale(1) rotate(360deg);}
 }
-  
+
 @-webkit-keyframes spinw {
     from { -webkit-transform: rotate(0deg);}
     to { -webkit-transform: rotate(360deg);}
 }
- 
+
 @-moz-keyframes spinm {
     from { -moz-transform: rotate(0deg);}
     to { -moz-transform: rotate(360deg);}
